src/main/java/com/example/productapi/error/ResponseException.java
package com.example.productapi.error;

import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.NoArgsConstructor;

@Data
@AllArgsConstructor
@NoArgsConstructor
public class ResponseException {
    private String errorText;
}